Add todo hooks and improve benchmark/test TODO coverage

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,7 +21,9 @@ addopts =
 
 # Test paths
 testpaths = tests
-pythonpath = src
+pythonpath =
+    src
+    .
 
 # Minimum Python version
 minversion = 6.0
